src/objects/System_Exception_Logger_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting controls the behavior of the exception logger</description>
    <fields>
        <fullName>Case_Record_Type_Name__c</fullName>
        <description>This setting indicates a Case record should be opened using the record type specified</description>
        <inlineHelpText>Enter the Record Type name for the Case to be opened.</inlineHelpText>
        <label>Case Record Type Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleanup_Cycle__c</fullName>
        <defaultValue>30</defaultValue>
        <description>This field represents the number of days from today to keep the System Exception Logger records.</description>
        <inlineHelpText>Enter the number of days to store the System Exception Logger records</inlineHelpText>
        <label>Cleanup Cycle</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exception_Level_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Exception Level Override custom setting will be used</description>
        <inlineHelpText>This option, if checked, will use the critical levels based on the Salesforce errors defined in the Exception Level Override. Example: FIELD_VALIDATION_ERROR: INFO. Will always set the Exception Level to INFO for all field validation errors.</inlineHelpText>
        <label>Exception_Level_Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Username__c</fullName>
        <description>The owner of the notification. The owner could be the Salesforce user for a Case, or the username for the remote process application.</description>
        <inlineHelpText>Enter the username to identify the owner of this exception</inlineHelpText>
        <label>Owner Username</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReThrow_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if logger is end of exception lifecycle, or throw exception to be handled by SFDC or application</description>
        <inlineHelpText>The exception logger by default does ends the exception cycle. If you always want the logger to re-throw the exception to be caught the application, set this flag to true.</inlineHelpText>
        <label>ReThrow Exception</label>
        <type>Checkbox</type>
    </fields>
    <label>System Exception Logger Configuration</label>
</CustomObject>